# WASS2S

./: LICENSE.txt  README.md  WAS_S2S_linux.yml  WAS_S2S_windows.yml  pyproject.toml  setup.py
core/: utils.py  was_analog.py  was_cca.py  was_compute_predictand.py  was_cross_validate.py  was_download.py  was_linear_models.py  was_machine_learning.py  was_merge_predictand.py  was_mme.py  was_models.py  was_pcr.py  was_verification.py
utilities/: Isohyet_zones.nc  characteristics_zones.nc  hysoet_zones.nc  mask_WAS.nc
wass2s/: __init__.py  ceac_agro.py  utils.py  was_analog.py  was_bias_correction.py  was_cca.py  was_cca_2.py  was_compute_predictand.py  was_cross_validate.py  was_download.py  was_eof.py  was_linear_models.py  was_machine_learning.py  was_merge_predictand.py  was_mme.py  was_pcr.py  was_seasonal_analysis.py  was_transformdata.py  was_verification.py
wass2s/.ipynb_checkpoints/: utils-checkpoint.py  was_mme-checkpoint.py
