[build-system]
requires = ["setuptools>=69.0.3", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "wass2s"
version = "0.3.1"
description = "A Python package for seasonal climate forecast."
readme = "README.md"
authors = [
    {name = "HOUNGNIBO Mandela", email = "hmandelahmadiba@gmail.com"},
]
license = "GPL-3.0-or-later"
keywords = [
    "climate",
    "seasonal forecasting",
    "subseasonal forecasting",
    "machine learning",
    "data downloading",
    "downscaling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

requires-python = ">=3.11"
dependencies = [
    "statsmodels",
    "pykrige",
    "cartopy",
    "scipy==1.11.3",
    "matplotlib==3.7.3",
    "xeofs==3.0.4",
    "xskillscore==0.0.26",
    "properscoring",
    "cdsapi==0.7.4",
    "rasterio",
    "geopandas",
    "shapely",
    "rioxarray",
    "SkillMetrics",
]

[tool.setuptools.packages.find]
where = ["."]
