[build-system]
requires = ["setuptools>=69.0.3", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "wass2s"
version = "0.3.5"
description = "A Python package for seasonal climate forecast."
readme = "README.md"
authors = [
    {name = "HOUNGNIBO C. M. Mandela", email = "hmandelahmadiba@gmail.com"},
]
license = "GPL-3.0-or-later"
keywords = [
    "climate",
    "seasonal forecasting",
    "subseasonal forecasting",
    "machine learning",
    "data downloading",
    "downscaling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

requires-python = ">=3.11"
dependencies = [
    "statsmodels",
    "scipy==1.11.3",
    "matplotlib==3.7.3",
    "xeofs==3.0.4",
    "cdsapi==0.7.4",
    "rasterio",
    "geopandas",
    "shapely",
    "rioxarray",
    "SkillMetrics",
    "optuna",
    "earthkit"    
    # "torch",
    # "lightning",
    # "cca-zoo"
]

[project.urls]
Homepage = "https://pypi.org/project/wass2s/"
Documentation = "https://wass2s-readthedocs.readthedocs.io/en/latest/"
Repository = "https://github.com/hmandela/WASS2S/tree/main"

[tool.setuptools.packages.find]
where = ["."]
